fix: remove visibility from consultants (fix #120) (#124)
* fix: remove visibility from consultants (fix #120)

feat: add links

* fix: resolve static analysis error, fix failing test

* fix: fix failing test

* ci: exclude debug bar from frontend tests, clear views on deploy

--- a/resources/css/components/_privacy-indicator.scss
+++ b/resources/css/components/_privacy-indicator.scss
@@ -6,6 +6,14 @@
     padding: var(--step-0);
 }
 
+.field__privacy--private {
+    background-color: var(--ll-text-color-error);
+}
+
+.field__privacy--public {
+    background-color: var(--ll-text-color-success);
+}
+
 .field__privacy .icon {
     height: var(--step-1);
     margin-block-end: calc(-1 * var(--step--5));
